# autographs

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json
.github/: .env.github.example  CODEOWNERS  docker-bake.hcl  production-patch-approvers.yml  review_fix.py
.github/actions/resolve-runtime-ip/: action.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-runtime/: action.yml  setup-node.yml
.github/workflows/: apply-security-updates.yml  ci.yml  data-smoke.yml  deploy.yml  format-dump.yml  ghcr-cleanup.yml  image-cleanup.yml  review-fix.yml  test-dump.yml  weekly-security-scan.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: weekly-security-scan-runtime-ip.md
.planning/phases/01-delivery-spine-and-oci-bootstrap/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-REVIEW.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW.md
.planning/phases/02-oracle-and-private-media-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.prompts/001-autograph-gallery-bootstrap-do/: 001-autograph-gallery-bootstrap-do.md  SUMMARY.md
app/: Dockerfile  next.config.ts  package.json  tsconfig.json
app/app/: catalog-data.ts  globals.css  layout.tsx  not-found.tsx  page.tsx
app/scripts/: migrate.ts  seed.ts  smoke-data.ts
controller/: Cargo.toml  Containerfile  Containerfile.smoke  Containerfile.static-smoke  Dockerfile  Dockerfile.smoke  Dockerfile.static-smoke
controller/db/: schema.sql
controller/db/updates/: 06-03-media-cleanup.sql  06-04-publish-snapshot-events.sql
controller/fixtures/: catalog-500.json
controller/src/: auth.rs  catalog.rs  catalog_admin.rs  config.rs  contracts.rs  derivatives.rs  lib.rs  main.rs  media.rs  oci_media.rs  oracle_catalog.rs  oracle_schema.rs  publisher.rs  routes.rs  storage_keys.rs  vault.rs
controller/src/routes/: admin_items.rs
controller/static-admin/: admin.css  admin.js  index.html
controller/static-public/: 404.html  index.html
controller/static-public/architecture/: index.html
controller/static-public/assets/: browse.js  detail.js  footer.js  landing.js  not-found.js  site.css
controller/static-public/collection/: index.html
controller/static-public/data/: not-found-quotes.json
controller/static-public/templates/: detail.html
controller/tests/: admin_workflow.rs  auth_and_health.rs  caddy_static_routes.rs  live_persistence_smoke.rs  live_static_publish_smoke.rs  media_cleanup.rs  publisher.rs  seed_content.rs  static_admin.rs  static_contract.rs
deploy/ansible/: ansible.cfg
deploy/caddy/: Caddyfile
deploy/compose/: compose.prod.yaml
deploy/nginx/: nginx.conf
deploy/scripts/: bootstrap-runtime.sh
docs/: architecture.drawio  configuration-contract.md  controller-walkthrough.md  dependency-updates.md  deployment-runbook.md  dns-runbook.md  oci-bootstrap.md  public-readiness.md  security-patching.md  security-review.md  static-artifact-contract.md  static-runtime-runbook.md  temporary-production-data-entry.md  terraform-state.md  terraform-tenancy-split.md
infra/terraform/: .terraform.lock.hcl  dns.tf  images.tf  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
scripts/: cleanup-ghcr-images.mjs  cleanup-ghcr-images.py  deploy-vm.sh  smoke-data-media-vm.sh  smoke-data-media.sh  validate-ci.sh  validate-runtime.sh
(+204 files in other folders)
